--- a/Алиса.ipynb
+++ b/Алиса.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"./models/vosk-model-ru-0.10\""
+    "model_path = \"C:/dev/postnauka/models/vosk-model-ru-0.10\""
    ]
   },
   {
@@ -15,22 +15,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json, os, sys, wave\n",
+    "import json, os, sys, wave, pyaudio\n",
     "import matplotlib.pyplot as plt\n",
     "from vosk import Model, KaldiRecognizer\n",
-    "import pyaudio"
+    "model = Model(model_path)\n",
+    "recognizer = KaldiRecognizer(model, 22050)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def record(player, seconds=7):\n",
-    "    leng = 22050 * seconds // 1024\n",
-    "    stream = player.open(input=True, format=pyaudio.paInt16, channels=1, rate=22050, \n",
-    "                         input_device_index=2,\n",
+    "    leng = (22050 * seconds)\n",
+    "    stream = player.open(input=True, format=pyaudio.paInt16, channels=1, rate=22050,\n",
     "                         frames_per_buffer=leng)\n",
     "    data = stream.read(leng)\n",
     "    stream.stop_stream()\n",
@@ -45,36 +45,55 @@
    "outputs": [],
    "source": [
     "def recognize(model, frames):\n",
-    "    rec = KaldiRecognizer(model, 22050)\n",
-    "    words = []\n",
-    "    if rec.AcceptWaveform(frames): words = rec.Result()\n",
-    "    else: words = rec.PartialResult()\n",
-    "    jsons = [json.loads(w) for w in words]\n",
-    "    texts = [w['text'] for w in jsons if 'text' in w and w['text']]\n",
-    "    text = \"\\n\".join(texts)\n",
+    "    global recognizer\n",
+    "    words = {}\n",
+    "    if recognizer.AcceptWaveform(frames): words = json.loads(recognizer.Result())\n",
+    "    else: words = json.loads(recognizer.PartialResult())\n",
+    "    text = words['text'] if 'text' in words else words ['partial']\n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Начинаем запись!\n",
+      "Записали!\n"
+     ]
+    }
+   ],
    "source": [
     "pya = pyaudio.PyAudio()\n",
-    "frames = record(pya, 7)\n",
-    "plt.plot(frames)\n",
-    "plt.show()"
+    "print(\"Начинаем запись!\")\n",
+    "frames = record(pya, 5)\n",
+    "print(\"Записали!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Начинаем распознавать!\n",
+      "Распознали!\n",
+      "Вы сказали: алиса принеси кофе\n"
+     ]
+    }
+   ],
    "source": [
-    "model = Model(model_path)\n",
-    "recognize(model, frames)"
+    "print(\"Начинаем распознавать!\")\n",
+    "text = recognize(model, frames)\n",
+    "print(\"Распознали!\")\n",
+    "print(\"Вы сказали:\", text)"
    ]
   }
  ],
@@ -94,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
