--- a/Алиса.ipynb
+++ b/Алиса.ipynb
@@ -1,13 +1,50 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Скачайте модель для распознавания русского или другого языка распознавания\n",
+    "\n",
+    "https://alphacephei.com/vosk/models -- с этого сайта. Там есть лёгкая (быстрее но хуже) и \"тяжёлая\" (медленнее но качественнее) версия. Распакуйте её в какую-нибудь папку и укажите путь к модели в переменной в следующем блоке."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"C:/dev/postnauka/models/vosk-model-ru-0.10\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Установите библиотеки, можно через `pip install`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install wave pyaudio wikipedia numpy matplotlib pyttsx3 vosk natasha yandex_music"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Импортируем все зависимости, загрузим модели распознавания и генерации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json, os, sys, wave, pyaudio, wikipedia, numpy as np, matplotlib.pyplot as plt, pyttsx3\n",
@@ -17,7 +54,7 @@
     "from yandex_music.client import Client\n",
     "\n",
     "kaldi_recognizer = KaldiRecognizer(\n",
-    "        Model(\"C:/dev/postnauka/models/vosk-model-ru-0.10\"), 22050)\n",
+    "        Model(model_path), 22050)\n",
     "wikipedia.set_lang(\"ru\")\n",
     "\n",
     "segmenter = Segmenter()\n",
@@ -40,13 +77,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Функции записи и распознавания"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def записать(player, seconds=7):\n",
@@ -70,13 +110,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Синтаксический и семантический анализ"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def синтаксический_анализ(text):\n",
@@ -126,13 +169,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Функции действий с сервисами"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def play(text):\n",
@@ -146,6 +192,13 @@
     "    print(summ)\n",
     "    engine.say(summ)\n",
     "    engine.runAndWait()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Запись, распознавание и анализ"
    ]
   },
   {
@@ -196,6 +249,13 @@
     "что_делать, с_чем = синтаксический_анализ(text)\n",
     "print(f\"действие = {что_делать}\\tобъект = {' '.join(с_чем)}\")\n",
     "intent_ = интент(что_делать)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Выполнение действий (обращение к сервисам)"
    ]
   },
   {
